--- a/src/stylesheets/custom_list_entries_editor.scss
+++ b/src/stylesheets/custom_list_entries_editor.scss
@@ -46,6 +46,7 @@
     overflow-y: scroll;
     margin-bottom: 15px;
     height: 100%;
+    list-style: none;
 
     &.dragging-over {
       border-color: $pagetextcolor;
